# downquark.ventureCore.KnowledgeBase

./: .gitignore  README.md  __AUTHENTICATE_NEW_REPOS.md
__misc/: .gitkeep  dq-knowledge.techstack.md  dq-knowledge.techstack.yml
_lib_modules/: .gitkeep  (+3 more)
src/Python/Projects/Rogue/: app.py  pyproject.toml
src/Python/Projects/Rogue/src_html/: index.html
src/Python/Projects/Rogue/src_python/ai_ml/machine_learning/: scrx.py
src/Python/Projects/Rogue/src_python/database/: rdbms.py
src/Python/Projects/Rogue/src_python/procedural/: Controller.py
src/Python/Projects/Rogue/src_python/procedural/algorithms/: DiamondSquare.py
src/Python/Projects/Rogue/src_python/procedural/elements/board/: Board.py
src/Python/Projects/Rogue/src_python/procedural/generation/: Grid.py
src/Python/Projects/Rogue/src_python/procedural/generation/environments/: room.py  rooms.py
src/Python/Projects/Rogue/src_python/procedural/generation/environments/maze/: Base.py  GrowingTree.py  __init__.py  create.py
src/Python/Projects/Rogue/src_python/procedural/proseedural/: decision.py  prng.py
src/Python/Projects/Rogue/src_python/procedural/ui/: example_canvas.py
src/Python/Projects/Rogue/src_python/procedural/utils/: console.py
src/Python/Projects/Rogue/src_python/procedural/utils/args/: __init__.py  procedural_generation.py
src/Python/Projects/Rogue/src_python/procedural/utils/args/procedural/: algorithms.py  generation.py
src/Python/Projects/Rogue/src_python/procedural/utils/const/: maze.py
src/Python/Projects/Rogue/src_python/procedural/utils/decorators/: configuration.py
(+414 files in other folders)
