[tool.poetry]
name = "rogue"
version = "0.1.0"
description = "downquark roguelike"
authors = ["dq-mlnck <40064794+dq-mlnck@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
